--- a/app/src/main/res/layout/activity_ejercicio1.xml
+++ b/app/src/main/res/layout/activity_ejercicio1.xml
@@ -19,7 +19,7 @@
         android:typeface="normal" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="325dp"
         android:layout_height="wrap_content"
         android:text="Boton 2"
         android:textAllCaps="false"
